Changed website name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="styles.css">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marioclub</title>
+    <title>Mario Club</title>
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
     <section class="banner">
         <img src="img/banner.png" alt="Marioclub banner">
         <div class="welcome">
-            <h2>Welcome to <br><span>Marioclub</span></h2>
+            <h2>Welcome to <br><span>Mario Club</span></h2>
         </div>
     </section>
     <nav class="main-nav">
