Fix footer name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </form>
     </section>
     <footer>
-        <p class="copyright">Copyright 2021 Marioclub</p>
+        <p class="copyright">Copyright 2021 Mario Club</p>
     </footer>
 
 </body>
